# play-haskell

./: .gitignore  .gitmodules  Archive.hs  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog.md  DB.hs  Embed.hs  EmbedRuntime.hs  GHCPool.hs  HighlightCSS.hs  LICENSE  Main.hs  Makefile  Mutex.hs  Pages.hs  Paste.hs  Persist.hs  Play.hs  README.md  RecentList.hs  ServerModule.hs  SpamDetect.hs  TODO.txt  build-package.sh  cabal.project  cabal.project.freeze  cpuquota-testcase.txt  hie.yaml  highlight-dark.pack.css  index.html  index.mustache  pastebin-haskell.cabal  play.mustache  read.html  read.mustache  response.html  stack.yaml  systemd-run-shim-user.patch  testcase-memlimit.txt  (+1 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Data/: Queue.hs
Paste/: Archive.hs  HighlightCSS.hs  Pages.hs  SpamDetect.hs
bwrap-files/: chroot-initialise.sh  entry.sh  start.sh
bwrap-workdir/: entry.sh
pastebin-haskell/: .gitignore  ChangeLog.md  Dockerfile  LICENSE  Makefile  README.md  build-package.sh  highlight-dark.pack.css  highlight-light.pack.css  index.mustache  migrate_db_1_2.sh  migrate_db_3_4.sh  pastebin-haskell.cabal  play.mustache  read.mustache
pastebin-haskell/bwrap-files/: start.sh
pastebin-haskell/src/: Challenge.hs  ExitEarly.hs  GHCPool.hs  Main.hs  Options.hs  Pages.hs  Paste.hs  Play.hs  ServerModule.hs  Shim.hs  SpamDetect.hs
pastebin-haskell/src/Data/Queue/: Priority.hs
pastebin-haskell/src/Paste/: DB.hs
pastebin-haskell/src/Play/: WorkerPool.hs
pastebin-haskell/src/Play/WorkerPool/: WorkerReqs.hs
pastebin-haskell/static/: play-index.ts
play-haskell-server/: .gitignore  Makefile  README.md  example-snippets.txt  migrate_db_1_2.sh  migrate_db_2_3.sh  migrate_db_3_4.sh  migrate_db_4_5.sh  migrate_db_5_6.sh  play-haskell-server.cabal  play.mustache
play-haskell-server/src/: DB.hs  LinuxStats.hs  Main.hs  Pages.hs  Play.hs  ServerModule.hs  Statistics.hs
play-haskell-server/src/Data/Queue/: Priority.hs
play-haskell-server/src/Play/: Examples.hs  WorkerPool.hs
play-haskell-server/src/Play/WorkerPool/: WorkerReqs.hs
play-haskell-server/src/Statistics/: Stats.hs
play-haskell-server/static/: Makefile  admin_dashboard.html  highlight.pack.js  package.json  play-index.ts
play-haskell-server/test/: Main.hs
play-haskell-server/test/Text/JSON/: Shim.hs
play-haskell-types/: GenSecretKey.hs  LICENSE  play-haskell-types.cabal
play-haskell-types/src/: PlayHaskellTypes.hs
play-haskell-types/src/PlayHaskellTypes/: Constants.hs  Sign.hs  Statistics.hs  UTF8.hs
play-haskell-types/src/PlayHaskellTypes/Statistics/: RunningHist.hs  Stats.hs  Types.hs
play-haskell-types/test/: Main.hs
play-haskell-worker/: .gitignore  Makefile  efault.txt  play-haskell-worker.cabal
play-haskell-worker/bwrap-files/: .gitignore  chroot-initialise.sh  dwindle-dependencies.py  entry.sh  mkallbuildscripts.sh  mkbuildscript.sh  mkyolcscript.sh  sandbox.cabal.in  stage-1.sh  stage-2.sh  stage-3.sh  start.sh  systemd-kill-shim.c  systemd-run-shim.c  systemd-shim-inc.h
play-haskell-worker/bwrap-files/packagelists/: 8.4.4  8.6.5  8.8.4  9.10.3  9.12.4  9.14.1  9.2.8  9.4.8  9.8.4
play-haskell-worker/src/: GHCPool.hs  Main.hs
play-haskell-worker/test/: Main.hs
snap-server-utils/: snap-server-utils.cabal
snap-server-utils/src/Snap/Server/: Utils.hs
snap-server-utils/src/Snap/Server/Utils/: BasicAuth.hs  Challenge.hs  ExitEarly.hs  Hex.hs  Options.hs  Shim.hs  SpamDetect.hs
static/: Makefile  gulpfile.js  package.json  play-index.js  play-index.ts  play.html
test/: Main.hs
