cabal-version:       2.0
name:                pastebin-haskell
synopsis:            Pastebin service in Haskell
version:             0.2.14.0
license:             MIT
license-file:        LICENSE
author:              Tom Smeding
maintainer:          tom@tomsmeding.com
build-type:          Simple
homepage:            https://github.com/tomsmeding/pastebin-haskell
extra-source-files:  index.mustache read.mustache highlight-light.pack.css highlight-dark.pack.css
                     migrate_db_1_2.sh migrate_db_2_3.sh migrate_db_3_4.sh migrate_db_4_5.sh
                     static/highlight.pack.js static/robots.txt ChangeLog.md

executable pastebin-haskell
  main-is:
    Main.hs
  other-modules:
    Data.Queue
    GHCPool
    Options
    Pages
    Paste
    Paste.Archive
    Paste.DB
    Paste.HighlightCSS
    Play
    ServerModule
    SpamDetect
  build-depends:
    base >= 4.13 && < 4.15,
    array >= 0.5.4 && < 0.6,
    bytestring >= 0.10.12 && < 0.11,
    containers >= 0.6.3.1 && < 0.7,
    clock >= 0.8 && < 0.9,
    filepath >= 1.4.2.1 && < 1.5,
    io-streams,
    json >= 0.10 && < 0.11,
    libarchive >= 3.0.2.2 && < 3.1,
    mustache >= 2.3.1 && < 2.4,
    parsec >= 3.1.14.0 && < 3.2,
    process >= 1.6.13.2 && < 1.7,
    stm >= 2.5 && < 2.6,
    random >= 1.2.0 && < 1.3,
    safe ^>=0.3,
    snap-server >= 1.1.1.2 && < 1.2,
    snap-core >= 1.0.5.0 && < 1.1,
    sqlite-simple >= 0.4.18 && < 0.5,
    text,
    time >= 1.9.3 && < 1.11,
    unix >= 2.7.2 && < 2.8,
    utf8-string >= 1.0.2 && < 1.1,
    zlib >= 0.6.2 && < 0.7
  hs-source-dirs:      .
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -threaded "-with-rtsopts=-qg -N"

test-suite play-test
  type: exitcode-stdio-1.0
  main-is:
    Main.hs
  other-modules:
    Text.JSON.Shim
  hs-source-dirs:
    test
  build-depends:
    base >= 4.13 && < 4.15,
    clock >= 0.8 && < 0.9,
    json >= 0.10 && < 0.11,
    HTTP >= 4000.4.0 && < 4000.5
  default-language:
    Haskell2010
  ghc-options:
    -Wall -threaded -with-rtsopts=-N

source-repository head
  type: git
  location: https://github.com/tomsmeding/pastebin-haskell
