cabal-version:       2.0
name:                play-haskell-server
synopsis:            Web server for play-haskell
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Tom Smeding
maintainer:          tom@tomsmeding.com
build-type:          Simple
homepage:            https://github.com/tomsmeding/play-haskell
extra-source-files:  index.mustache read.mustache highlight-light.pack.css highlight-dark.pack.css
                     migrate_db_1_2.sh migrate_db_2_3.sh migrate_db_3_4.sh migrate_db_4_5.sh
                     static/highlight.pack.js static/robots.txt

executable play-haskell-server
  main-is:
    Main.hs
  other-modules:
    Data.Queue
    Data.Queue.Priority
    Pages
    DB
    Play
    Play.WorkerPool
    Play.WorkerPool.WorkerReqs
    ServerModule
  build-depends:
    base >= 4.13 && < 4.15,
    play-haskell-types,
    snap-server-utils,
    aeson >= 2.0.3 && < 2.1,
    bytestring >= 0.10.12 && < 0.11,
    containers >= 0.6.3.1 && < 0.7,
    clock >= 0.8 && < 0.9,
    directory >= 1.3.6.0 && < 1.4,
    filepath >= 1.4.2.1 && < 1.5,
    http-client >= 0.7.11 && < 0.8,
    http-client-tls >= 0.3.6.1 && < 0.4,
    http-types >= 0.12.3 && < 0.13,
    io-streams,
    mustache >= 2.4.0 && < 2.5,
    process >= 1.6.13.2 && < 1.7,
    stm >= 2.5 && < 2.6,
    random >= 1.2.0 && < 1.3,
    snap-server >= 1.1.1.2 && < 1.2,
    snap-core >= 1.0.5.0 && < 1.1,
    sqlite-simple >= 0.4.18 && < 0.5,
    text,
    time >= 1.9.3 && < 1.11,
    unix >= 2.7.2 && < 2.8,
    zlib >= 0.6.2 && < 0.7
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -threaded "-with-rtsopts=-qg -N"

test-suite play-test
  type: exitcode-stdio-1.0
  main-is:
    Main.hs
  other-modules:
    Text.JSON.Shim
  hs-source-dirs:
    test
  build-depends:
    base >= 4.13 && < 4.15,
    clock >= 0.8 && < 0.9,
    json >= 0.10 && < 0.11,
    HTTP >= 4000.4.0 && < 4000.5
  default-language:
    Haskell2010
  ghc-options:
    -Wall -threaded -with-rtsopts=-N

source-repository head
  type: git
  location: https://github.com/tomsmeding/play-haskell
