cabal-version:       2.0
name:                play-haskell-server
synopsis:            Web server for play-haskell
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Tom Smeding
maintainer:          tom@tomsmeding.com
build-type:          Simple
homepage:            https://github.com/haskell/play-haskell
extra-source-files:
  play.mustache
  migrate_db_1_2.sh migrate_db_2_3.sh migrate_db_3_4.sh migrate_db_4_5.sh migrate_db_5_6.sh
  static/ace-builds/src-min-noconflict/*.js
  static/admin_dashboard.html
  static/haskell-logo-tw.svg
  static/haskell-play-logo.png
  static/Makefile
  static/play-index.js
  static/play-index.ts
  static/robots.txt
  example-snippets.txt

executable play-haskell-server
  main-is:
    Main.hs
  other-modules:
    Data.Queue
    Data.Queue.Priority
    Pages
    DB
    LinuxStats
    Play
    Play.Examples
    Play.WorkerPool
    Play.WorkerPool.WorkerReqs
    ServerModule
  build-depends:
    base >= 4.16,
    play-haskell-types,
    snap-server-utils,
    aeson >= 2.0.3,
    bytestring >= 0.11,
    containers >= 0.6.3.1,
    clock >= 0.8,
    directory >= 1.3.6.0,
    file-embed >= 0.0.16.0,
    filepath >= 1.4.2.1,
    http-client >= 0.7.11,
    http-client-tls >= 0.3.6.1,
    http-types >= 0.12.3,
    io-streams,
    mustache >= 2.4.0,
    process >= 1.6.13.2,
    stm >= 2.5,
    random >= 1.2.0,
    snap-server >= 1.1.1.2,
    snap-core >= 1.0.5.0,
    sqlite-simple >= 0.4.18,
    text,
    time >= 1.9.3,
    unix >= 2.7.2,
    vector,
    zlib >= 0.6.2
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded

test-suite play-test
  type: exitcode-stdio-1.0
  main-is:
    Main.hs
  other-modules:
    Text.JSON.Shim
  hs-source-dirs:
    test
  build-depends:
    base,
    clock >= 0.8,
    json >= 0.10,
    HTTP >= 4000.4.0
  default-language:
    Haskell2010
  ghc-options:
    -Wall -threaded -with-rtsopts=-N

source-repository head
  type: git
  location: https://github.com/haskell/play-haskell
