cabal-version:       2.0
name:                play-haskell-types
synopsis:            Shared types for play-haskell
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Tom Smeding
maintainer:          tom@tomsmeding.com
build-type:          Simple
homepage:            https://github.com/tomsmeding/pastebin-haskell

library
  exposed-modules:
    PlayHaskellTypes
    PlayHaskellTypes.Sign
  build-depends:
    base >= 4.13 && < 4.15,
    snap-server-utils,
    bytestring >= 0.10.12 && < 0.11,
    cryptonite >= 0.30 && < 0.31,
    json >= 0.10 && < 0.11,
    memory >= 0.17 && < 0.18
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2

executable gen-secret-key
  main-is: GenSecretKey.hs
  build-depends:
    base,
    snap-server-utils,
    play-haskell-types,
    bytestring,
    unix >= 2.7.2 && < 2.8
  hs-source-dirs:      .
  default-language:    Haskell2010
  ghc-options:         -Wall -O2

source-repository head
  type: git
  location: https://github.com/tomsmeding/pastebin-haskell
