cabal-version:       2.0
name:                play-haskell-types
synopsis:            Shared types for play-haskell
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Tom Smeding
maintainer:          tom@tomsmeding.com
build-type:          Simple
homepage:            https://github.com/haskell/play-haskell

library
  exposed-modules:
    PlayHaskellTypes
    PlayHaskellTypes.Constants
    PlayHaskellTypes.Sign
  other-modules:
    PlayHaskellTypes.UTF8
  build-depends:
    base >= 4.16,
    snap-server-utils,
    aeson >= 2.0.3,
    bytestring >= 0.11,
    cryptonite >= 0.30,
    memory >= 0.17,
    text
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

executable gen-secret-key
  main-is: GenSecretKey.hs
  build-depends:
    base,
    snap-server-utils,
    play-haskell-types,
    bytestring,
    unix >= 2.7.2 && < 2.8
  hs-source-dirs:      .
  default-language:    Haskell2010
  ghc-options:         -Wall

source-repository head
  type: git
  location: https://github.com/haskell/play-haskell
