cabal-version:       2.0
name:                play-haskell-worker
synopsis:            Worker server for play-haskell
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Tom Smeding
maintainer:          tom@tomsmeding.com
build-type:          Simple
homepage:            https://github.com/tomsmeding/pastebin-haskell

executable play-haskell-worker
  main-is:
    Main.hs
  other-modules:
    Data.Queue
    GHCPool
  build-depends:
    base >= 4.13 && < 4.15,
    snap-server-utils,
    play-haskell-types,
    bytestring >= 0.10.12 && < 0.11,
    containers >= 0.6.3.1 && < 0.7,
    clock >= 0.8 && < 0.9,
    deepseq >= 1.4.4.0 && < 1.5,
    filepath >= 1.4.2.1 && < 1.5,
    json >= 0.10 && < 0.11,
    process >= 1.6.13.2 && < 1.7,
    snap-server >= 1.1.1.2 && < 1.2,
    snap-core >= 1.0.5.0 && < 1.1,
    unix >= 2.7.2 && < 2.8,
    utf8-string >= 1.0.2 && < 1.1
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -threaded

test-suite worker-test
  type: exitcode-stdio-1.0
  main-is:
    Main.hs
  hs-source-dirs:
    test
  build-depends:
    base >= 4.13 && < 4.15,
    snap-server-utils,
    play-haskell-types,
    json >= 0.10 && < 0.11,
    HTTP >= 4000.4.0 && < 4000.5
  default-language:
    Haskell2010
  ghc-options: -Wall

source-repository head
  type: git
  location: https://github.com/tomsmeding/pastebin-haskell
