cabal-version:       2.0
name:                play-haskell-worker
synopsis:            Worker server for play-haskell
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Tom Smeding
maintainer:          tom@tomsmeding.com
build-type:          Simple
homepage:            https://github.com/tomsmeding/play-haskell

executable play-haskell-worker
  main-is:
    Main.hs
  other-modules:
    Data.Queue
    GHCPool
  build-depends:
    base >= 4.16 && < 4.17,
    snap-server-utils,
    play-haskell-types,
    bytestring >= 0.11 && < 0.12,
    containers >= 0.6.3.1 && < 0.7,
    clock >= 0.8 && < 0.9,
    filepath >= 1.4.2.1 && < 1.5,
    process >= 1.6.13.2 && < 1.7,
    snap-server >= 1.1.1.2 && < 1.2,
    snap-core >= 1.0.5.0 && < 1.1,
    text,
    unix >= 2.7.2 && < 2.8
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -threaded

test-suite worker-test
  type: exitcode-stdio-1.0
  main-is:
    Main.hs
  hs-source-dirs:
    test
  build-depends:
    base,
    snap-server-utils,
    play-haskell-types,
    aeson >= 2.0.3 && < 2.1,
    HTTP >= 4000.4.0 && < 4000.5,
    text,
    utf8-string >= 1.0.2 && < 1.1
  default-language:
    Haskell2010
  ghc-options: -Wall -O -threaded

source-repository head
  type: git
  location: https://github.com/tomsmeding/play-haskell
