cabal-version:       2.0
name:                snap-server-utils
synopsis:            Utilities for making a web server using Snap
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Tom Smeding
maintainer:          tom@tomsmeding.com
build-type:          Simple
homepage:            https://github.com/tomsmeding/pastebin-haskell

library
  exposed-modules:
    Snap.Server.Utils
    Snap.Server.Utils.BasicAuth
    Snap.Server.Utils.Challenge
    Snap.Server.Utils.ExitEarly
    Snap.Server.Utils.Hex
    Snap.Server.Utils.Options
    Snap.Server.Utils.Shim
    Snap.Server.Utils.SpamDetect
  other-modules:
  build-depends:
    base >= 4.13 && < 4.15,
    aeson >= 2.0.3 && < 2.1,
    base64-bytestring >= 1.2.1.0 && < 1.3,
    bytestring >= 0.10.12 && < 0.11,
    containers >= 0.6.3.1 && < 0.7,
    clock >= 0.8 && < 0.9,
    filepath >= 1.4.2.1 && < 1.5,
    io-streams,
    stm >= 2.5 && < 2.6,
    random >= 1.2.0 && < 1.3,
    snap-core >= 1.0.5.0 && < 1.1,
    transformers ^>= 0.5.6.2,
    text,
    time >= 1.9.3 && < 1.11,
    utf8-string >= 1.0.2 && < 1.1
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2

source-repository head
  type: git
  location: https://github.com/tomsmeding/pastebin-haskell
